samples/_failures_safe/1761331788_005c6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_604d3749.c: In function ‘main’:
./samples/SAFE/__tmp_604d3749.c:135:38: error: missing terminating " character
  135 |         printf("%-20s %s\n", "----", "-----
      |                                      ^~~~~~
./samples/SAFE/__tmp_604d3749.c:135:9: error: expected expression at end of input
  135 |         printf("%-20s %s\n", "----", "-----
      |         ^~~~~~
./samples/SAFE/__tmp_604d3749.c:135:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_604d3749.c:135:9: error: expected declaration or statement at end of input
